made meme-generator-project

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,6 @@
     </head>
     <body>
         <div id="root"></div>
-        <p>Heelo</p>
-        <!-- <script src="../src/index.js"></script> -->
+        <script src="../src/index.js"></script>
     </body>
 </html>
